# game-of-life-Goifd

./: CMakeLists.txt  README.md
app/: main.cpp
include/: particle.hpp  particleSystem.hpp  system.hpp
src/: particle.cpp  particleSystem.cpp  system.cpp
test/: test.cpp
